--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vivaverde-logo.svg" />
+    <link rel="icon" type="image/png" href="/vivaverde-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vivaverde - Plante Medicinale Ecologice din Moldova</title>
     <meta name="description" content="Vivaverde cultivă și colectează plante medicinale ecologice pe 10 hectare în Moldova. 20 de ani de experiență, muncă manuală, 100% natural fără chimicale." />
@@ -14,12 +14,12 @@
     <meta property="og:title" content="Vivaverde - Plante Medicinale Ecologice din Moldova" />
     <meta property="og:description" content="Ferma ecologică cu 10 hectare de plante medicinale cultivate manual în Moldova. Experiență din 2005, 100% natural." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/vivaverde-logo.svg" />
-    <meta property="og:image:alt" content="Vivaverde Logo - Traditional Romanian Pattern" />
+    <meta property="og:image" content="/vivaverde-logo.png" />
+    <meta property="og:image:alt" content="Vivaverde Logo" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@vivaverde_md" />
-    <meta name="twitter:image" content="/vivaverde-logo.svg" />
+    <meta name="twitter:image" content="/vivaverde-logo.png" />
     <meta name="twitter:image:alt" content="Vivaverde Logo - Traditional Romanian Pattern" />
   </head>
 
